--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "autoprefix": "^1.0.1",
         "autoprefixer": "^10.4.2",
         "eslint-plugin-nuxt": "^3.1.0",
-        "nuxt3": "latest",
+        "nuxt3": "^3.0.0-27434419.754ff0c",
         "postcss": "^8.4.5",
         "prettier": "2.5.1",
         "prettier-plugin-tailwindcss": "^0.1.5",
